--- a/about.html
+++ b/about.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Prism&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Prism&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <div class="nav">
-            <a href="./index.html"> <img src="./logo.png" class="mainlogo"/> </a>
+            <a href="./index.html"> <img src="./logo.png" class="mainlogo" /> </a>
             <input type="checkbox" id="bar" />
             <label for="bar">
                 <i class="fa-solid fa-bars"></i>
@@ -137,26 +140,26 @@
             <div class="brandsh1">
                 <h1>Brands We have Worked on</h1>
             </div>
-            <marquee scrollamount="20">
-            <div class="brandbox">
-                <div class="brands">
-                    <img src="./bens logo.jpeg" class="brands1" />
-                    <h3>Mercedes Bens</h3>
+            <marquee scrollamount="20" smooth>
+                <div class="brandbox">
+                    <div class="brands">
+                        <img src="./bens logo.jpeg" class="brands1" />
+                        <h3>Mercedes Bens</h3>
+                    </div>
+                    <div class="brands">
+                        <img src="./Audi logo.jpeg" class="brands1" />
+                        <h3>Audi</h3>
+                    </div>
+                    <div class="brands">
+                        <img src="./vwolswagen logo.jpeg" class="brands1" />
+                        <h3>Vwolswagen</h3>
+                    </div>
+                    <div class="brands">
+                        <img src="./skoda logo.png" class="brands1" />
+                        <h3>Skoda</h3>
+                    </div>
                 </div>
-                <div class="brands">
-                    <img src="./Audi logo.jpeg" class="brands1" />
-                    <h3>Audi</h3>
-                </div>
-                <div class="brands">
-                    <img src="./vwolswagen logo.jpeg" class="brands1" />
-                    <h3>Vwolswagen</h3>
-                </div>
-                <div class="brands">
-                    <img src="./skoda logo.png" class="brands1" />
-                    <h3>Skoda</h3>
-                </div>
-            </div>
-        </marquee>
+            </marquee>
         </div>
         <div class="bottombox">
             <div class="bottombox1">
