--- a/carrents.html
+++ b/carrents.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Prism&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Prism&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="rentcontainer">
         <div class="nav">
-            <a href="./index.html"> <img src="./logo.png" class="mainlogo"/> </a>
+            <a href="./index.html"> <img src="./logo.png" class="mainlogo" /> </a>
             <input type="checkbox" id="bar" />
             <label for="bar">
                 <i class="fa-solid fa-bars"></i>
@@ -44,10 +46,10 @@
         <div class="rentheading">
             <h1>CHOOSE YOUR CAR</h1>
             <p>Lorem ipsum <br>dolor sit<br> amet consectetur <br>adipisicing elit. </p>
-                <div class="loginpage">
-                    <button><a href="./login.html" target="_blank">Login</a></button>
-                    <button><a href="./login.html" target="_blank">Sign Up</a></button>
-             </div>
+            <div class="loginpage">
+                <button><a href="./login.html" target="_blank">Login</a></button>
+                <button><a href="./login.html" target="_blank">Sign Up</a></button>
+            </div>
         </div>
         <marquee direction="left" scrollamount="10">AUTO HUB</marquee><br />
         <div class="rentbox">
@@ -259,57 +261,71 @@
         <div class="customerreview">
             <div class="customcontainer">
                 <h1>Customer Feedback</h1>
-                  <div class="customsubcontainer">
-                   <div class="customcolumnbox">
+                <div class="customsubcontainer">
+                    <div class="customcolumnbox">
                         <div class="customone">
-                           <span><i class="fa-solid fa-quote-left"></i></span><br/>
-                           <div class="customcontent">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint animi totam nesciunt iusto, aspernatur nobis.</p><br/><br/>
-                           <h2>Gokulnath</h2>
-                           </div>
+                            <span><i class="fa-solid fa-quote-left"></i></span><br />
+                            <div class="customcontent">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint animi totam nesciunt
+                                    iusto, aspernatur nobis.</p><br /><br />
+                                <h2>Gokulnath</h2>
+                            </div>
                         </div>
                         <div class="customone">
-                         <span><i class="fa-solid fa-quote-left"></i></span><br/>
-                           <div class="customcontent">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint animi totam nesciunt iusto, aspernatur nobis.</p><br/><br/>
-                           <h2>Sanjith</h2>
-                           </div>
+                            <span><i class="fa-solid fa-quote-left"></i></span><br />
+                            <div class="customcontent">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint animi totam nesciunt
+                                    iusto, aspernatur nobis.</p><br /><br />
+                                <h2>Sanjith</h2>
+                            </div>
                         </div>
-                   </div>   
-                   <div class="customcolumnbox">
+                    </div>
+                    <div class="customcolumnbox">
                         <div class="customone">
-                         <span><i class="fa-solid fa-quote-left"></i></span><br/>
-                           <div class="customcontent">
-                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint animi totam nesciunt iusto, aspernatur nobis.</p><br/><br/>
-                           <h2>Jones</h2>
-                         </div>
+                            <span><i class="fa-solid fa-quote-left"></i></span><br />
+                            <div class="customcontent">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint animi totam nesciunt
+                                    iusto, aspernatur nobis.</p><br /><br />
+                                <h2>Jones</h2>
+                            </div>
                         </div>
                         <div class="customone">
-                          <span><i class="fa-solid fa-quote-left"></i></span><br/>
-                          <div class="customcontent">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint animi totam nesciunt iusto, aspernatur nobis.</p><br/><br/>
-                           <h2>Thomas</h2>
-                          </div>
+                            <span><i class="fa-solid fa-quote-left"></i></span><br />
+                            <div class="customcontent">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint animi totam nesciunt
+                                    iusto, aspernatur nobis.</p><br /><br />
+                                <h2>Thomas</h2>
+                            </div>
                         </div>
-                      </div>     
-                  </div>
-               </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="bottombox">
             <div class="bottombox1">
-                <img src="./logo.png"/>
+                <img src="./logo.png" />
                 <button><i class="fa-solid fa-location-dot fa-location box1font"></i>AUTO HUB</button>
                 <p>2023 AUTO HUB. All Rights Reserved <sup>®</sup></p>
             </div>
             <div class="bottombox2">
                 <div class="bottomlist">
                     <div class="navbar">
-                    <a href="./about.html"><ul>about</ul></a>
-                    <a href="./service.html"><ul>Services</ul></a>
-                    <a href="./carrents.html"><ul>rent a car</ul></a>
-                    <a href="./contact.html"><ul>contact us</ul></a>
-                    <a href="./login.html" target="_blank"><ul>login</ul></a>
-                </div>
+                        <a href="./about.html">
+                            <ul>about</ul>
+                        </a>
+                        <a href="./service.html">
+                            <ul>Services</ul>
+                        </a>
+                        <a href="./carrents.html">
+                            <ul>rent a car</ul>
+                        </a>
+                        <a href="./contact.html">
+                            <ul>contact us</ul>
+                        </a>
+                        <a href="./login.html" target="_blank">
+                            <ul>login</ul>
+                        </a>
+                    </div>
                     <div class="bottomfonts">
                         <h1><i class="fa-brands fa-facebook-f "></i></h1>
                         <h1><i class="fa-brands fa-instagram "></i></h1>
@@ -320,8 +336,8 @@
                         <p>Term & condition</p>
                         <p>Privacy Policy</p>
                     </div>
-                 </div>
+                </div>
             </div>
-         </div>
+        </div>
     </div>
 </body>
