--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Prism&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Prism&display=swap"
+        rel="stylesheet">
 </head>
-
+ 
 <body>
     <div class="servicecontainer">
         <div class="nav">
-            <a href="./index.html"> <img src="./logo.png" class="mainlogo"/> </a>
+            <a href="./index.html"> <img src="./logo.png" class="mainlogo" /> </a>
             <input type="checkbox" id="bar" />
             <label for="bar">
                 <i class="fa-solid fa-bars"></i>
@@ -106,9 +108,10 @@
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            
-          <a href="https://www.google.com/maps/@10.236331,77.477754,18z"><button class="mapbutton"><i class="fa-solid fa-location-dot fa-location box1font"></i>FIND MY LOCATION</button></a>
-        
+
+            <a href="https://www.google.com/maps/@10.236331,77.477754,18z"><button class="mapbutton"><i
+                        class="fa-solid fa-location-dot fa-location box1font"></i>FIND MY LOCATION</button></a>
+
             <div class="num">
                 <h1>001-234-4567</h1>
                 <h1>001-234-8964</h1><br />
@@ -135,19 +138,29 @@
         </div>
         <div class="bottombox">
             <div class="bottombox1">
-                <img src="./logo.png"/>
+                <img src="./logo.png" />
                 <button><i class="fa-solid fa-location-dot fa-location box1font"></i>AUTO HUB</button>
                 <p>2023 AUTO HUB. All Rights Reserved <sup>®</sup></p>
             </div>
             <div class="bottombox2">
                 <div class="bottomlist">
                     <div class="navbar">
-                    <a href="./about.html"><ul>about</ul></a>
-                    <a href="./service.html"><ul>Services</ul></a>
-                    <a href="./carrents.html"><ul>rent a car</ul></a>
-                    <a href="./contact.html"><ul>contact us</ul></a>
-                    <a href="./login.html" target="_blank"><ul>login</ul></a>
-                </div>
+                        <a href="./about.html">
+                            <ul>about</ul>
+                        </a>
+                        <a href="./service.html">
+                            <ul>Services</ul>
+                        </a>
+                        <a href="./carrents.html">
+                            <ul>rent a car</ul>
+                        </a>
+                        <a href="./contact.html">
+                            <ul>contact us</ul>
+                        </a>
+                        <a href="./login.html" target="_blank">
+                            <ul>login</ul>
+                        </a>
+                    </div>
                     <div class="bottomfonts">
                         <h1><i class="fa-brands fa-facebook-f "></i></h1>
                         <h1><i class="fa-brands fa-instagram "></i></h1>
@@ -158,8 +171,8 @@
                         <p>Term & condition</p>
                         <p>Privacy Policy</p>
                     </div>
-                 </div>
+                </div>
             </div>
-         </div>
+        </div>
     </div>
 </body>
