--- a/service.html
+++ b/service.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Prism&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@400;500;600&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Prism&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="servicecontainer">
         <div class="nav">
-            <a href="./index.html"> <img src="./logo.png" class="mainlogo"/> </a>
+            <a href="./index.html"> <img src="./logo.png" class="mainlogo" /> </a>
             <input type="checkbox" id="bar" />
             <label for="bar">
                 <i class="fa-solid fa-bars"></i>
@@ -46,20 +48,20 @@
                 inventore, quasi tempore incidunt modi.</p>
         </div>
         <div class="servicecontent">
-                <img src="./logo.png" class="logo" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet deleniti porro ex deserunt unde illo
-                    nihil
-                    dolorum eaque, eos, ipsum, autem recusandae incidunt! Quo, quod enim! Accusamus debitis recusandae
-                    incidunt fugiat magnam fuga expedita illo consequuntur, maiores adipisci consequatur dolores dolorem
-                    repudiandae distinctio repellat assumenda quas alias eveniet. Aperiam et officia similique adipisci.
-                    Ab
-                    in vitae illum voluptate aliquid fugiat doloremque nam explicabo architecto obcaecati. Nulla omnis
-                    quae
-                    quia earum quidem nesciunt, hic at non, reiciendis maxime voluptas quisquam ratione itaque iure!
-                    Assumenda est unde quisquam harum et sint id, veritatis molestias ea eligendi temporibus impedit a
-                    ipsum
-                    sed cupiditate.</p>
-            
+            <img src="./logo.png" class="logo" />
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet deleniti porro ex deserunt unde illo
+                nihil
+                dolorum eaque, eos, ipsum, autem recusandae incidunt! Quo, quod enim! Accusamus debitis recusandae
+                incidunt fugiat magnam fuga expedita illo consequuntur, maiores adipisci consequatur dolores dolorem
+                repudiandae distinctio repellat assumenda quas alias eveniet. Aperiam et officia similique adipisci.
+                Ab
+                in vitae illum voluptate aliquid fugiat doloremque nam explicabo architecto obcaecati. Nulla omnis
+                quae
+                quia earum quidem nesciunt, hic at non, reiciendis maxime voluptas quisquam ratione itaque iure!
+                Assumenda est unde quisquam harum et sint id, veritatis molestias ea eligendi temporibus impedit a
+                ipsum
+                sed cupiditate.</p>
+
         </div>
         <div class="servicebox1">
             <div class="imgalign">
@@ -119,19 +121,29 @@
         </div>
         <div class="bottombox">
             <div class="bottombox1">
-                <img src="./logo.png"/>
+                <img src="./logo.png" />
                 <button><i class="fa-solid fa-location-dot fa-location box1font"></i>AUTO HUB</button>
                 <p>2023 AUTO HUB. All Rights Reserved <sup>®</sup></p>
             </div>
             <div class="bottombox2">
                 <div class="bottomlist">
                     <div class="navbar">
-                    <a href="./about.html"><ul>about</ul></a>
-                    <a href="./service.html"><ul>Services</ul></a>
-                    <a href="./carrents.html"><ul>rent a car</ul></a>
-                    <a href="./contact.html"><ul>contact us</ul></a>
-                    <a href="./login.html" target="_blank"><ul>login</ul></a>
-                </div>
+                        <a href="./about.html">
+                            <ul>about</ul>
+                        </a>
+                        <a href="./service.html">
+                            <ul>Services</ul>
+                        </a>
+                        <a href="./carrents.html">
+                            <ul>rent a car</ul>
+                        </a>
+                        <a href="./contact.html">
+                            <ul>contact us</ul>
+                        </a>
+                        <a href="./login.html" target="_blank">
+                            <ul>login</ul>
+                        </a>
+                    </div>
                     <div class="bottomfonts">
                         <h1><i class="fa-brands fa-facebook-f "></i></h1>
                         <h1><i class="fa-brands fa-instagram "></i></h1>
@@ -142,8 +154,8 @@
                         <p>Term & condition</p>
                         <p>Privacy Policy</p>
                     </div>
-                 </div>
+                </div>
             </div>
-         </div>
+        </div>
     </div>
 </body>
